@@ -1,5 +1,6 @@
 DIST eselect-emacs-0.1.tar.bz2 7345 RMD160 e4f0d09db620dfad1947af7003f6071e60bd2dc2 SHA1 ff5994d17d21f56d60746618d27c998fca611362 SHA256 21ebc83033a7eb0fc054301fd9f79cb3e18eaf05e65671c0b9668c0a4678b4c0
 DIST eselect-emacs-0.2.tar.bz2 7628 RMD160 40bc44061b37bece8ac493e2903b5de49cf177de SHA1 d19118b5c7d34a6afaa8b53141516040aafb56aa SHA256 6a43692cb63ced74abb82298dc98fc6c0e0d7b9a9eae8ae9d563f3051f2ab587
+DIST eselect-emacs-0.3.tar.bz2 7673 RMD160 f10d59abcd9b2e33c04e7ac279df844a3e008ade SHA1 0e71efba6e7f641d93d7f9cf00ae29f8feaa20f3 SHA256 4237153a55be647d59a37d85c0748b476da60d793b8721cee9f7a62d80c60769
 EBUILD eselect-emacs-0.1.ebuild 528 RMD160 e1c648335460edf026208a303b6269750be4b4b9 SHA1 2059a9273b350a3302baee0f9d40b5f4f3e7eed9 SHA256 9cf684388be458d73beafe08e53d139521bfc1d254b09890e3a3f7d56b422c6b
 MD5 6a0bcaba1a4108ba4898720b0e4002ef eselect-emacs-0.1.ebuild 528
 RMD160 e1c648335460edf026208a303b6269750be4b4b9 eselect-emacs-0.1.ebuild 528
@@ -8,13 +9,20 @@ EBUILD eselect-emacs-0.2.ebuild 528 RMD160 e1c648335460edf026208a303b6269750be4b
 MD5 6a0bcaba1a4108ba4898720b0e4002ef eselect-emacs-0.2.ebuild 528
 RMD160 e1c648335460edf026208a303b6269750be4b4b9 eselect-emacs-0.2.ebuild 528
 SHA256 9cf684388be458d73beafe08e53d139521bfc1d254b09890e3a3f7d56b422c6b eselect-emacs-0.2.ebuild 528
-MISC ChangeLog 1276 RMD160 7c812da25712b817e6331d7df4caa3c31a24caa0 SHA1 82ce057e7cbb09de890a94d1e18091d6742f4c01 SHA256 b319cfe641290faa98a993845e17dcd5b56bd742f5c2fae7014ae41d87555ef5
-MD5 b3d58de0a88340f4c4326e24204a64e8 ChangeLog 1276
-RMD160 7c812da25712b817e6331d7df4caa3c31a24caa0 ChangeLog 1276
-SHA256 b319cfe641290faa98a993845e17dcd5b56bd742f5c2fae7014ae41d87555ef5 ChangeLog 1276
+EBUILD eselect-emacs-0.3.ebuild 528 RMD160 e1c648335460edf026208a303b6269750be4b4b9 SHA1 2059a9273b350a3302baee0f9d40b5f4f3e7eed9 SHA256 9cf684388be458d73beafe08e53d139521bfc1d254b09890e3a3f7d56b422c6b
+MD5 6a0bcaba1a4108ba4898720b0e4002ef eselect-emacs-0.3.ebuild 528
+RMD160 e1c648335460edf026208a303b6269750be4b4b9 eselect-emacs-0.3.ebuild 528
+SHA256 9cf684388be458d73beafe08e53d139521bfc1d254b09890e3a3f7d56b422c6b eselect-emacs-0.3.ebuild 528
+MISC ChangeLog 1280 RMD160 5cb0339470211d37c3072397404cd916aaf6246f SHA1 7ea6374da9739d757a281631aa548de01f9ef5ff SHA256 16eab65b81022d116ddd07611d0621af8c9b8d44165d6bf4d88046eb8ca71265
+MD5 f34e980a53b30ebdf5f03deb96ff0fa9 ChangeLog 1280
+RMD160 5cb0339470211d37c3072397404cd916aaf6246f ChangeLog 1280
+SHA256 16eab65b81022d116ddd07611d0621af8c9b8d44165d6bf4d88046eb8ca71265 ChangeLog 1280
 MD5 09e0ae529acf45082071604d1e9d1d8e files/digest-eselect-emacs-0.1 250
 RMD160 21641c794c1b963244a0404a60d2218acbd1e94a files/digest-eselect-emacs-0.1 250
 SHA256 c7e1f7f1723cb8cfe701cf1d0276cc164381273dbf7f7c6044c2b6757ba6bd1f files/digest-eselect-emacs-0.1 250
 MD5 7aac28fb5cabef08d2b5d10705c714e2 files/digest-eselect-emacs-0.2 250
 RMD160 81b27ddd81d6c018a8eea2490acc362dffe2c48e files/digest-eselect-emacs-0.2 250
 SHA256 dd00a9243490e859b5c57d050d604c1a319b2da06d6d0e7bfb426501833aa7f9 files/digest-eselect-emacs-0.2 250
+MD5 9bc880d045ed0c69c59f53bef36afe54 files/digest-eselect-emacs-0.3 250
+RMD160 c44f4f37f6847bccd82b4544908aba20310ad4d2 files/digest-eselect-emacs-0.3 250
+SHA256 5b12ddf43083562b2123d44e9744e243b9eee078b1988d29742f17e193cb4fde files/digest-eselect-emacs-0.3 250
