@@ -1,0 +1,3 @@
+MD5 6991c84dc609bbbc59b5a65a3d258bc2 eselect-emacs-0.3.tar.bz2 7673
+RMD160 f10d59abcd9b2e33c04e7ac279df844a3e008ade eselect-emacs-0.3.tar.bz2 7673
+SHA256 4237153a55be647d59a37d85c0748b476da60d793b8721cee9f7a62d80c60769 eselect-emacs-0.3.tar.bz2 7673
